Resolved layout-shift on load

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -120,6 +120,12 @@
   max-width: 800px;
 }
 
+.track:not(:global(.glider-track)) {
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
+}
+
 .slide {
   margin: 1rem 1rem 2rem;
   padding: 1rem;
@@ -130,7 +136,12 @@
     0 16px 16px rgba(0, 0, 0, 0.12);
 }
 
+.slide:not(:global(.glider-slide)) {
+  flex: 0 0 calc(100% - 2rem);
+}
+
 .image {
+  max-width: 100%;
   height: auto;
 }
 
